force-app/main/default/objects/Employee__c/fields/About_Employee__c.field-meta.xml
<CustomField>
    <fullName>About_Employee__c</fullName>
    <label>About Employee</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>