force-app/main/default/objects/Employee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( ISBLANK(TEXT(state__c)) , &apos;&apos; ,  TEXT( state__c ) &amp;&quot;,&quot; ) &amp; IF( ISBLANK(TEXT( country__c )) , &apos;&apos; ,  TEXT(  country__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>