force-app/main/default/objects/Employee__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <defaultValue>&quot;abc@gmail.com&quot;</defaultValue>
    <description>This filed is used to store the Employee Email.</description>
    <inlineHelpText>Please enter your email ID</inlineHelpText>
    <label>Employee Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>