force-app/main/default/objects/Employee__c/fields/Final_Salary__c.field-meta.xml
<CustomField>
    <fullName>Final_Salary__c</fullName>
    <formula>Salary__c - (Salary__c *  PF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>