force-app/main/default/objects/Employee__c/fields/Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Health Insurance</description>
    <inlineHelpText>Please enter your details about health insurance.</inlineHelpText>
    <label>Health Insurance</label>
    <type>Checkbox</type>
</CustomField>