force-app/main/default/objects/Employee__c/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <label>PF %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>