force-app/main/default/objects/Employee__c/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <formula>IMAGE(&apos;https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/59908/employee-clipart-md.png&apos;, &apos;Profile Picture&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Picture</label>
    <type>Text</type>
</CustomField>