force-app/main/default/objects/Employee__c/validationRules/Name_can_not_contain_test.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_can_not_contain_test</fullName>
    <active>true</active>
    <description>Name cannot contain test</description>
    <errorConditionFormula>CONTAINS(LOWER(Name), &quot;test&quot;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name cannot contain test</errorMessage>
</ValidationRule>